src/App.css
.App {
  text-align: center;
}

.Tooltip {
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  float: left;
  width: 310px;
  visibility: visible;
  font-family: Verdana, "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
  font-size: 12px;
  line-height: 17px;
  justify-content: space-between;

}
.TooltipSpaceTR {
  width: 10px;
  background-image: url(./images/tooltip.png);
  background-position: top right;
}

.TooltipSpaceBR {
  width: 10px;
  background-image: url(./images/tooltip.png);
  background-position: Bottom right;
}

.Separator {
  display: flex;
  flex-direction: row;
}

.TooltipTop {
  padding-left: 10px;
  padding-top: 10px;
  width: 310px;
  background-image: url(./images/tooltip.png);
  background-position: top left;
}
.TooltipBottom {
  padding-left: 10px;
  padding-bottom: 10px;
  padding-right: 10px;
  width: 310px;
  background-image: url(./images/tooltip.png);
  background-position: bottom left;
}
.TooltipBottomRight {
  background-image: url(./images/tooltip.png);
  background-position: bottom right;
  width: 320px;
}


.Table {
  width: 100%;
  display: inline-table;
  vertical-align: inherit
}

.InlineTable {
  display: inline-table;
  vertical-align: inherit;
}

.ItemSlot {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
}

.ItemSlot.ItemDetails {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.ItemSlot.ItemDetails.Legendary {
  color: #ff8000
}

.ItemSlot.ItemDetails.Epic {
  color: #a335ee;
}

.ItemSlot.ItemDetails.Rare {
  color: #0070dd;
}

.ItemSlot.ItemDetails.Uncommon {
  color: #1eff00;
}

.ItemSlot.ItemDetails.Common {
  color: #fff;
}

.ItemSlot.ItemDetails.Poor {
  color: #9d9d9d;
}

.ItemSlotIcon {
  height: 62px;
  width: 62px;
  border-radius: 4px !important;
  outline: 1.3px solid;
  margin-right: 5px;
}

.ItemSlotIcon.Legendary {
  outline-color: #ff8000;
}

.ItemSlotIcon.Epic {
  outline-color: #a335ee;
}

.ItemSlotIcon.Rare {
  outline-color: #0070dd;
}

.ItemSlotIcon.Uncommon {
  outline-color: #1eff00;
}

.ItemSlotIcon.Common {
  outline-color: #fff
}

.ItemSlotIcon.Poor {
  outline-color: #9d9d9d;
}

.moneygold {
  padding-right: 14px;
  padding-top: 18px;
  background: no-repeat right center;
  background-image: url(./images/Money/money-gold.gif);
}

.moneysilver {
  padding-right: 14px;
  padding-top: 18px;
  background: no-repeat right center;
  background-image: url(./images/Money/money-silver.gif);
}

.moneycopper {
  padding-right: 14px;
  padding-top: 18px;
  background: no-repeat right center;
  background-image: url(./images/Money/money-copper.gif);
}

.money {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  text-align: left;
  width: 100%;
}

.itemrow {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  text-align: left;
}

.itemrow.classes {
  justify-content: flex-start;
}

.c6 {
  color: #C41E3A;
  justify-content: flex-start;
}

.c12 {
  color: #A330C9;
  justify-content: flex-start;
}

.c11 {
  color: #FF7C0A;
}

.c13 {
  color: #33937F;
}

.c3 {
  color: #AAD372;
}

.c8 {
  color: #3FC7EB;
}

.c10 {
  color: #00FF98;
}

.c2 {
  color: #F48CBA;
}

.c5 {
  color: #FFFFFF;
}

.c4 {
  color: #FFF468;
}

.c7 {
  color: #0070dd;
}

.c9 {
  color: #8788EE;
}

.c1 {
  color: #C69B6D;
}


.itemrow.itemlevelORset {
  color: #ffd100
}


.itemrow.statrow {
  flex-direction: column;
  align-items: flex-start;
}

.itemrow.statrow.equipstats {
  color: #1eff00
}

.itemrow.setrow {
  flex-direction: column;
  align-items: flex-start;
  color: #9d9d9d;
}

.itemrow.setrow.setitems {
  padding-left: 0.6em;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

